- add gh-pages deployment properties

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://alekseytyurin.github.io/landing-page-softformance",
+  "homepage": "https://alekseytyurin.github.io/landing-page-softformance",
   "name": "landing-page-softformance",
   "version": "0.1.0",
   "private": true,
